# weave

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mac_os.yml  release.yml  test.yaml
resources/: COPYRIGHT.md  LLAMA_HELP.md  OPENAI_HELP.md  SHORTCUTS.md  icon.512.raw
src/: app.rs  consts.rs  drama_llama.rs  lib.rs  macros.rs  main.rs  node.rs  openai.rs  settings.rs  story.rs
src/app/: settings.rs
test/data/: sharks.0.0.3.json
